--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "react-app",
+  "homepage": "http://Coolsourav.github.io/reactproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -t true",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -24,6 +27,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^6.1.1",
     "vite": "^4.0.0"
   }
 }
